# discord-pcat-bot

./: .gitignore  README.md  event_users.json  pyproject.toml  requirements.txt
docs/: CODE_STRUCTURE.md
src/: event_users.json  main.py
src/bot/: bot.py  main.py
src/bot/core/: __init__.py  config.py  database.py  logging_config.py  utils.py
src/bot/core/interfaces/: __init__.py  repository.py  unit_of_work.py
src/bot/core/repositories/: __init__.py  sqlite_repository.py
src/bot/domain/: __init__.py  services.py
src/bot/domain/entities/: __init__.py  deal.py  entities.py  event.py  event_participation.py  game.py  user.py
src/bot/domain/models/: __init__.py  deal.py  event.py  game.py  participation.py  user.py
src/bot/domain/services/: __init__.py  deal_service.py  event_service.py  game_service.py  participation_service.py  synchronization_service.py  user_service.py
src/bot/domain/utils/: create_text_table.py
src/bot/infrastructure/: __init__.py  unit_of_work_impl.py
src/cogs/: __init__.py  announcement.py  deals.py  eventannouncement.py  eventlogger.py  events.py  general.py
src/config/: check.py  discord_rules.py  settings.py
src/models/: discordbot.py
